@@ -1,0 +1,11 @@
+Usage Examples:
+
+Fetch pdb 2k39 and align models:
+    
+    $ alignmodels.py 2k39
+    
+Fetch pdb 2k39 and align models using backbone of residues with number smaller
+than 71:
+
+    $ alignmodels.py 2k39 --select "backbone and resnum < 71"
+
