@@ -8,7 +8,8 @@ downloaded.
 
 Options:
   -h, --help            show this help message and exit
-  --silent              omit verbose information, default is False
+  --examples            show usage examples and exit
+  --quiet               don't print status messages to stdout
 
   Parameters:
     -c FLOAT, --cutoff=FLOAT
@@ -32,7 +33,7 @@ Options:
                         write square-fluctuations
     -v, --covariance    write covariance matrix
     -b, --beta-factors  write B-factors
-    -o, --hessian       write Hessian matrix
+    -l, --hessian       write Hessian matrix
     -k, --kirchhoff     write Kirchhoff matrix
 
   Output Options:
