@@ -4,7 +4,8 @@ ProDy v0.6 - Generate Biomolecule Coordinates
 
 Options:
   -h, --help            show this help message and exit
-  --silent              omit verbose information, default is False
+  --examples            show usage examples and exit
+  --quiet               don't print status messages to stdout
   -p STRING, --prefix=STRING
                         prefix for output files, default is PDB_biomol_
   -b INT, --biomol=INT  index of the biomolecule, default is "none"
