@@ -8,7 +8,8 @@ downloaded.
 
 Options:
   -h, --help            show this help message and exit
-  --silent              omit verbose information, default is False
+  --examples            show usage examples and exit
+  --quiet               don't print status messages to stdout
 
   Parameters:
     -c FLOAT, --cutoff=FLOAT
