@@ -1,0 +1,12 @@
+Usage Examples:
+
+Fetch PDB 1p38, run GNM calculations using default parameters, and results:
+    
+  $ gnm.py 1p38
+    
+Fetch PDB 1aar, run GNM calculations with cutoff distance 7 angstrom for 
+chain A carbon alpha atoms with residue numbers less than 70, and 
+save all of the graphical output files:
+
+  $ gnm.py 1aar -c 7 -s "calpha and chain A and resnum < 70" -A
+
