@@ -8,7 +8,8 @@ server will be downloaded.
 
 Options:
   -h, --help            show this help message and exit
-  --silent              omit verbose information, default is False
+  --examples            show usage examples and exit
+  --quiet               don't print status messages to stdout
 
   Parameters:
     -n INT, --number-of-modes=INT
@@ -46,7 +47,7 @@ Options:
     -J STRING, --projection-figure=STRING
                         save projections onto specified subspaces, e.g. "1,2"
                         for projections onto PCs 1 and 2; "1,2 1,3" for
-                        projections onto PCs 1,2 and 1, 3;"1 1,2,3" for
+                        projections onto PCs 1,2 and 1, 3; "1 1,2,3" for
                         projections onto PCs 1 and 1, 2, 3
 
   Figure Options:
