@@ -7,6 +7,7 @@ Select atoms specified by SELECTION from PDB and write them in a file.
 
 Options:
   -h, --help            show this help message and exit
-  --silent              omit verbose information, default is False
+  --examples            show usage examples and exit
+  --quiet               don't print status messages to stdout
   -p STRING, --prefix=STRING
                         prefix for output files, default is "PDB_selected"
